// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`styled function > Snapshot tests (runtime: automatic) > basic usage should match snapshot 1`] = `
"
.kuma-686274543{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.kuma-686274543:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.kuma-686274543{flex-direction:column;}}

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { styled } from '@kuma-ui/core';
const Box = props => {
  const existingClassName = props.className || \\"\\";
  const newClassName = \\"kuma-686274543\\";
  const combinedClassName = [existingClassName, newClassName].filter(Boolean).join(\\" \\");
  return <__Box as=\\"div\\" {...props} className={combinedClassName} />;
};
function App() {
  return <Box>test</Box>;
}
"
`;

exports[`styled function > Snapshot tests (runtime: automatic) > using className prop should match snapshot 1`] = `
"
.🐻-1440123820{box-shadow:0 1px 2px 0 rgba(0, 0, 0, 0.05);}.kuma-686274543{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.kuma-686274543:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.kuma-686274543{flex-direction:column;}}

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { styled, css } from '@kuma-ui/core';
const Box = props => {
  const existingClassName = props.className || \\"\\";
  const newClassName = \\"kuma-686274543\\";
  const combinedClassName = [existingClassName, newClassName].filter(Boolean).join(\\" \\");
  return <__Box as=\\"span\\" {...props} className={combinedClassName} />;
};
function App() {
  return <Box className={\\"\\\\uD83D\\\\uDC3B-1440123820\\"}>
              test
            </Box>;
}
"
`;

exports[`styled function > Snapshot tests (runtime: automatic) > using pseudo elements should match snapshot 1`] = `
"
.kuma-686274543{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.kuma-686274543:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.kuma-686274543{flex-direction:column;}}

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { styled } from '@kuma-ui/core';
const Box = props => {
  const existingClassName = props.className || \\"\\";
  const newClassName = \\"kuma-686274543\\";
  const combinedClassName = [existingClassName, newClassName].filter(Boolean).join(\\" \\");
  return <__Box as=\\"div\\" {...props} className={combinedClassName} />;
};
function App() {
  return <Box>test</Box>;
}
"
`;

exports[`styled function > Snapshot tests (runtime: classic) > basic usage should match snapshot 1`] = `
"
.kuma-686274543{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.kuma-686274543:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.kuma-686274543{flex-direction:column;}}

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { styled } from '@kuma-ui/core';
const Box = props => {
  const existingClassName = props.className || \\"\\";
  const newClassName = \\"kuma-686274543\\";
  const combinedClassName = [existingClassName, newClassName].filter(Boolean).join(\\" \\");
  return <__Box as=\\"div\\" {...props} className={combinedClassName} />;
};
function App() {
  return <Box>test</Box>;
}
"
`;

exports[`styled function > Snapshot tests (runtime: classic) > using className prop should match snapshot 1`] = `
"
.🐻-1440123820{box-shadow:0 1px 2px 0 rgba(0, 0, 0, 0.05);}.kuma-686274543{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.kuma-686274543:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.kuma-686274543{flex-direction:column;}}

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { styled, css } from '@kuma-ui/core';
const Box = props => {
  const existingClassName = props.className || \\"\\";
  const newClassName = \\"kuma-686274543\\";
  const combinedClassName = [existingClassName, newClassName].filter(Boolean).join(\\" \\");
  return <__Box as=\\"span\\" {...props} className={combinedClassName} />;
};
function App() {
  return <Box className={\\"\\\\uD83D\\\\uDC3B-1440123820\\"}>
              test
            </Box>;
}
"
`;

exports[`styled function > Snapshot tests (runtime: classic) > using pseudo elements should match snapshot 1`] = `
"
.kuma-686274543{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.kuma-686274543:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.kuma-686274543{flex-direction:column;}}

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { styled } from '@kuma-ui/core';
const Box = props => {
  const existingClassName = props.className || \\"\\";
  const newClassName = \\"kuma-686274543\\";
  const combinedClassName = [existingClassName, newClassName].filter(Boolean).join(\\" \\");
  return <__Box as=\\"div\\" {...props} className={combinedClassName} />;
};
function App() {
  return <Box>test</Box>;
}
"
`;

exports[`styled function > Snapshot tests (runtime: undefined) > basic usage should match snapshot 1`] = `
"
.kuma-686274543{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.kuma-686274543:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.kuma-686274543{flex-direction:column;}}

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { styled } from '@kuma-ui/core';
const Box = props => {
  const existingClassName = props.className || \\"\\";
  const newClassName = \\"kuma-686274543\\";
  const combinedClassName = [existingClassName, newClassName].filter(Boolean).join(\\" \\");
  return <__Box as=\\"div\\" {...props} className={combinedClassName} />;
};
function App() {
  return <Box>test</Box>;
}
"
`;

exports[`styled function > Snapshot tests (runtime: undefined) > using className prop should match snapshot 1`] = `
"
.🐻-1440123820{box-shadow:0 1px 2px 0 rgba(0, 0, 0, 0.05);}.kuma-686274543{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.kuma-686274543:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.kuma-686274543{flex-direction:column;}}

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { styled, css } from '@kuma-ui/core';
const Box = props => {
  const existingClassName = props.className || \\"\\";
  const newClassName = \\"kuma-686274543\\";
  const combinedClassName = [existingClassName, newClassName].filter(Boolean).join(\\" \\");
  return <__Box as=\\"span\\" {...props} className={combinedClassName} />;
};
function App() {
  return <Box className={\\"\\\\uD83D\\\\uDC3B-1440123820\\"}>
              test
            </Box>;
}
"
`;

exports[`styled function > Snapshot tests (runtime: undefined) > using pseudo elements should match snapshot 1`] = `
"
.kuma-686274543{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.kuma-686274543:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.kuma-686274543{flex-direction:column;}}

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { styled } from '@kuma-ui/core';
const Box = props => {
  const existingClassName = props.className || \\"\\";
  const newClassName = \\"kuma-686274543\\";
  const combinedClassName = [existingClassName, newClassName].filter(Boolean).join(\\" \\");
  return <__Box as=\\"div\\" {...props} className={combinedClassName} />;
};
function App() {
  return <Box>test</Box>;
}
"
`;
